#####                              CHANGELOG                               #####
#####                                                                      #####
################################################################################

0.19.* UPDATES
--------------------------------------------------------------------------------
5: Enabled the SE option, so the pipeline should now be ready to handle also single-end input (not in the reports, yet)
4: Handled the case that no reads were disgarded from the mock reference building step
3: Removed minimum lengths criteris in pear command
2: Use N for stitching instead of T
1: New dev branch

0.18.*: Stable release on 18.01.2023
--------------------------------------------------------------------------------
2: Another critial bugfix for variant calling report
1: VariantCalling report dependency bugfix

0.17.* UPDATES
--------------------------------------------------------------------------------
69: Adjusted the remaining input and report files to work with and without provided reference genome
68: Adjusted the final report so that it runs also without provided reference genome
67: Input files changed for final report so that pipeline dependencies work without provided reference genome
66: Exception handling if the first sample does not have reads aligned to reference genome. Now the sample with the most alignemtns is used for visualisation (instead of the first one)
65: Missing variables added for variatn calling report
64: Fixed dependencies from the report
63: Server resource allocation for the Insilico standalo report added to the server default file
62: Pairwise comparisons added to the report
61: More chapter explanations added to the QC-R-Module
60: Minimum and Maximum fragment lengths added to the basic stats report part
59: Location information added for the most covered alignment loci
58: Location names added for the most covered alignment loci